[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thematic-render"
version = "1.1"
description = "A powerful terrain shading pipeline that synthesizes biome and thematic factors (elevation, moisture, canopy, lithology, water, etc) and composites them into stylized, georeferenced GeoTIFF map textures."
authors = [{ name = "corb" }]
readme = { file = "docs/readme.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT License" }

dependencies = [
    "numpy~=2.2.6",
    "YMLEditor~=1.7.1",
    "rasterio~=1.4.3",
    "scipy~=1.16.2",
    "PySide6~=6.8.1.1",
    "PyYAML~=6.0.2",
    "tqdm~=4.67.1",
]

keywords = ["GDAL", "GIS", "DEM", "Elevation", "workflow"]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
render-theme = "ThematicRender.thematic_render_cli:main"

[tool.setuptools]
license-files = ["LICENSE*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ThematicRender*"]

[project.urls]
Repository = "https://github.com/corb555/Thematic-render"